Created file services

--- a/Server/SmartPark/SmartPark.csproj
+++ b/Server/SmartPark/SmartPark.csproj
@@ -28,6 +28,8 @@
 
   <ItemGroup>
     <Folder Include="AutoMapper\" />
+    <Folder Include="wwwroot\Uploads\Location\" />
+    <Folder Include="wwwroot\Uploads\Profile\" />
   </ItemGroup>
 
 </Project>
